# pokemon-dlt-dbt-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  README.md  justfile  pnpm-workspace.yaml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/notepads/dbt-pokemon-plan/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/dbt-pokemon-task-14/: learnings.md
.sisyphus/plans/: pokemon-dashboard.md
pokemon-dagster-app/: .gitignore  README.md  pyproject.toml
pokemon-dagster-app/src/pokemon_dagster_app/defs/: __init__.py  orchestration.py
pokemon-dashboard-app/: .gitignore  .prettierignore  .vercelignore  AGENTS.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
pokemon-dashboard-app/public/: pokemon.db
pokemon-dashboard-app/src/app/: page.tsx  (+3 more)
pokemon-dbt-pipeline/: .user.yml  AGENTS.md  dbt_project.yml  profiles.yml  pyproject.toml
pokemon-dbt-pipeline/models/: sources.yml
pokemon-dbt-pipeline/seeds/: type_effectiveness.csv
pokemon-dbt-pipeline/tests/: test_matchup_effectiveness_values.sql  test_matchup_matrix_completeness.sql  test_no_duplicate_pokemon.sql  test_pokemon_stat_totals.sql
pokemon-dlt-pipeline/: AGENTS.md  pyproject.toml
pokemon-dlt-pipeline/.dlt/: config.toml
pokemon-dlt-pipeline/pokemon_pipeline/: export.py  pipeline.py
pokemon-dlt-pipeline/pokemon_pipeline/sources/: pokemon_api.py
pokemon-dlt-pipeline/tests/: test_data_quality.py  test_pipeline_run.py  test_transformers.py
(+59 files in other folders)
