[project]
name = "pokemon-pipeline"
version = "0.1.0"
dependencies = ["dlt[duckdb]", "requests"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "duckdb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
